# coding-companion

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  cc-config.json  easyloggingpp.conf
cmake/: CopyResources.cmake  CreateCmpCmdsLink.cmake
include/: animation.h  animation_controller.h  cat_companion.h  ccobject.h  companion.h  companion_factory.h  config.h  environment.h  graphics_manager.h  index_buffer.h  input_handler.h  render_batch.h  renderer.h  scene.h  shader.h  sprite.h  sprite_renderer.h  state_machine.h  texture.h  texture_loader.h  texture_manager.h  time_controller.h  transform.h  vertex.h  vertex_array.h  vertex_buffer.h  vertex_buffer_layout.h  window.h
resources/: shader.frag  shader.vert  sprite.shader
resources/companions/: cat_companion.json
resources/icons/: executable_icon.rc
resources/shaders/: sprite.shader
src/: animation_controller.cpp  ccobject.cpp  companion_factory.cpp  environment.cpp  index_buffer.cpp  input_handler.cpp  main.cpp  renderer.cpp  shader.cpp  sprite.cpp  sprite_renderer.cpp  state_machine.cpp  texture.cpp  texture_loader.cpp  vertex_array.cpp  vertex_buffer.cpp  vertex_buffer_layout.cpp  window.cpp
